2008-09-26  Dan Winship  <danw@gnome.org>

	* tests/data-input-stream.c:
	* tests/data-output-stream.c:
	* tests/live-g-file.c:
	* tests/memory-input-stream.c:
	* tests/memory-output-stream.c: Use g_assert_error() and
	g_assert_no_error()

2008-09-26  Matthias Clasen  <mclasen@redhat.com>
	
	Bug 545350 – GAppInfo deletion
	Bug 545351 – Reset associations for content type

	* gio.symbols:
	* gappinfo.[hc]: New functions g_app_info_can_delete,
	g_app_info_delete and g_app_info_reset_type_associations.

	* gdesktopappinfo.c:
	* gwin32appinfo.c: Implementations of these.

	* tests/Makefile.am:
	* tests/desktop-app-info.c: Tests for GAppInfo functionality.

2008-09-26  Dan Winship  <danw@gnome.org>

	Bug 505361 – gunixinputstream.c assumes poll() available
	Bug 509446 – portable blocking gio cancellation

	* gcancellable.c (g_cancellable_make_pollfd): New method to make a
	GPollFD for a cancellable (which is slightly more complicated on
	Windows than Unix).

	* gunixinputstream.c (g_unix_input_stream_read):
	* gunixoutputstream.c (g_unix_output_stream_write): Use
	g_cancellable_make_pollfd() and g_poll() rather than using poll()
	directly.

	* tests/unix-streams.c: test of GUnixInputStream,
	GUnixOutputStream, and GCancellable.

2008-09-26  Dan Winship  <danw@gnome.org>

	* gdesktopappinfo.c (get_all_desktop_entries_for_mime_type): add a
	cast to stop a gcc warning

	* gfile.c (g_file_copy_attributes): add parens to stop a gcc
	warning

2008-09-25  Dan Winship  <danw@gnome.org>

	Bug 553426 - cancellable clarifications

	* gcancellable.c (g_cancellable_class_init): Add a note to the
	"cancelled" signal docs warning about thread-safety issues
	(g_cancellable_cancel): Note that cancelling an asynchronous
	operation takes effect asynchronously, not immediately.

2008-09-22  Nelson Benítez León  <nbenitez@svn.gnome.org>

	* gioenums.h: Add new GFileCopyFlag, to leave target file with
	default perms, instead of setting the source file perms, in a copy
	operation.
