@@ -1,3 +1,7 @@
+2008-09-29  David Zeuthen  <davidz@redhat.com>
+
+	* gvolume.c: Clarify semantics of g_volume_mount_finish() (#552168)
+
 2008-09-26  Dan Winship  <danw@gnome.org>
 
 	* tests/data-input-stream.c:
